--- a/bootstart.html
+++ b/bootstart.html
@@ -9,7 +9,28 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
+
+<div class="container">
+<div class="row">
+<div class="col-sm-2">.col-sm-2<br>T</div>
+<div class="col-sm-2">.col-sm-2<br>H</div>
+<div class="col-sm-2">.col-sm-2<br>O</div>
+<div class="col-sm-2">.col-sm-2<br>T</div>
+<div class="col-sm-2">.col-sm-2<br>A</div>
+<div class="col-sm-2">.col-sm-2<br>P</div>
+</div>
+
+<div class="row">
+<div class="col-md">.col-md<br>Talinum</div>
+<div class="col-md">.col-md<br>Hackberry</div>
+<div class="col-md">.col-md<br>Oak Tree</div>
+<div class="col-md">.col-md<br>Tecoma</div>
+<div class="col-md">.col-md<br>Acacia</div>
+<div class="col-md">.col-md<br>Packera</div>
+</div>
+</div>
 
 
 
