--- a/plants.html
+++ b/plants.html
@@ -129,9 +129,36 @@
                 <td>Packwood</td>
                 <td>Plum</td>
                 </tr>
+        <br>
         
+  
       </tbody>
     </table>
+
+  <div class="btn">
+<buttontype="button" class= "btn btn-secondary">T</button>
+<buttontype="button" class= "btn btn-secondary">H</button>
+<buttontype="button" class="btn btn-secondary">O</button>
+<buttontype="button" class="btn btn-secondary">T</button>
+<buttontype="button" class="btn btn-secondary">A</button>
+<buttontype="button" class="btn btn-secondary">P</button>
+</div>
+ 
+<div class="btn-toolbar" role= "toolbar"aria-label=" Toolbar with button groups">
+<div class= "btn-group mr-1 "role="group"aria-label="First group">
+<buttontype="button" class= "btn btn-success">H</button>
+<buttontype="button" class="btn btn-success">O</button>
+<buttontype="button" class="btn btn-success">T</button>
+</div>
+<div class="btn-group mr-2"role="group"aria-label="Second group">
+<buttontype="button" class="btn btn-warning">T</button>
+<buttontype="button" class="btn btn-warning">A</button>
+</div>
+<div class="btn-group mr-3"role="group"aria-label="Third group">
+<buttontype="button" class="btn btn-danger">P </button>
+</div>
+</div>
+
     </body>
     </html>
 
