--- a/plants.html
+++ b/plants.html
@@ -159,8 +159,17 @@
 </div>
 </div>
 
-    </body>
-    </html>
+<br>
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="cat.html">Cat</a>
+    <a class="dropdown-item" href="dog.html">Dog</a>
+  </div>
+</div>    
 
 </body>
 </html>
