--- a/plants.html
+++ b/plants.html
@@ -177,22 +177,18 @@
 </div>
 </div>
 
-<br>
+
+
 
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Dropdown button
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="cat.html">Cat</a>
-    <a class="dropdown-item" href="dog.html">Dog</a>
+    <a class="dropdown-item" href="cat.html">Cat Webpage</a>
+    <a class="dropdown-item" href="dog.html">Dog Webpage</a>
   </div>
-</div>    
-
-<br>
-
-
-    
+</div>
 
 <form>
 <div class="form-group">
@@ -210,6 +206,38 @@
 </div>
 <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<br>
+<div class="card">
+  <img class="card-img-top" src="Talium.ipg.jpg" alt="Geranium">
+  <div class="card-body">
+    <h4 class="card-title">Talium</h4>
+    <p class="card-text"> Talinum is a genus of herbaceous succulent plants in the family Talinaceae whose common names include fameflower and flameflower. Several species bear edible leaves, and Talinum fruticosum is widely grown in tropical regions as a leaf vegetable. </p>
+    <a href="https://en.wikipedia.org/wiki/Talinum" class="btn btn-primary">More details about the plant</a>
+  </div>
+</div>
+
+
+
+<div class="card">
+  <img class="card-img-top" src="hackberry.jpg" alt="Geranium">
+  <div class="card-body">
+    <h4 class="card-title">hackberry</h4>
+    <p class="card-text">Celtis occidentalis, commonly known as the common hackberry, is a large deciduous tree native to North America. </p>
+    <a href="https://en.wikipedia.org/wiki/Celtis_occidentalis" class="btn btn-primary">More details about the plant</a>
+  </div>
+</div>
+
+
+
+<div class="card">
+  <img class="card-img-top" src="oak tree.jpg" alt="Geranium">
+  <div class="card-body">
+    <h4 class="card-title">Oak Tree</h4>
+    <p class="card-text"> An oak is a tree or shrub in the genus Quercus  of the beech family, Fagaceae. </p>
+    <a href="https://en.wikipedia.org/wiki/Oak" class="btn btn-primary">More details about the plant</a>
+  </div>
+</div>
 
 
 
